gccida/c0/ix86_asm_file_end
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_asm_file_end/src/i386.c:4340:18: error: use of undeclared identifier 'off_806606'
output_asm_insn( off_806606, xops); 
                 ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_asm_file_end/src/obj/i386.o] Error 1
